--- a/school-portal/Pipfile
+++ b/school-portal/Pipfile
@@ -4,12 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 pillow = "*"
 django-filter = "*"
+django = "*"
+gunicorn = "*"
+whitenoise = "*"
+dj-database-url = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
